wip: adds prisma go client

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PSQL_HOST="localhost"
 PSQL_DATABASE_NAME="postgres"
 PSQL_USERNAME="postgres"
 PSQL_PASSWORD="postgres"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
