feat: adds kafka connection

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+# Database
 PSQL_PORT="5432"
 PSQL_HOST="localhost"
 PSQL_DATABASE_NAME="postgres"
 PSQL_USERNAME="postgres"
 PSQL_PASSWORD="postgres"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+
+# Kafka
+KAFKA_BOOTSTRAP_SERVERS="localhost:9092"
+KAFKA_PROTOCOL=
+KAFKA_USERNAME=
+KAFKA_PASSWORD=
